[package]
name = "piston-hello_world"
version = "0.1.0"
authors = ["Zachary Wells <zwells@email.sc.edu>"]
edition = "2018"

[[bin]]
name = "hello_world"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.112.0"
find_folder = "0.3.0"
